Update init.bluetooth.rc to call shell script when starting BT

--- a/android/init.bluetooth.rc
+++ b/android/init.bluetooth.rc
@@ -20,18 +20,18 @@ on property:bluetooth.stop=snoop
     setprop bluetooth.stop none
     stop bluetoothd-snoop
 
-service bluetoothd /system/bin/logwrapper /system/bin/bluetoothd
+service bluetoothd /system/bin/logwrapper /system/bin/sh /system/etc/init.bluetooth.sh /system/bin/bluetoothd
     class main
     # init does not yet support setting capabilities so run as root,
     # bluetoothd drop uid to bluetooth with the right linux capabilities
-    group bluetooth
+    group qcom_oncrpc bluetooth net_bt_admin
     disabled
     oneshot
 
-service bluetoothd-snoop /system/bin/logwrapper /system/bin/bluetoothd-snoop
+service bluetoothd-snoop /system/bin/logwrapper /system/etc/init.bluetooth.sh /system/bin/bluetoothd-snoop
     class main
     # init does not yet support setting capabilities so run as root,
     # bluetoothd-snoop drops unneeded linux capabilities
-    group nobody
+    group qcom_oncrpc bluetooth net_bt_admin
     disabled
     oneshot
